--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@
 
 .sticky {
     position: sticky;
+    z-index: 1;
     top: 0;
 }
 
@@ -38,7 +39,11 @@
 
 .p-l-m {
     padding-left: 20px;
-} 
+}
+
+.m-r-m {
+    margin-right: 20px;
+}
 
 .blue-shaded-bg {
     background-color: rgb(89, 37, 233);
@@ -80,6 +85,32 @@
         .date {
             color: #6b6b6e;
             font-weight: 500;
+        }
+
+        &__delete {
+            &--d-flex {
+                display: flex;
+            }
+
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border-radius: 8px;
+            background-color: red;
+            padding: 20px 10px;
+            cursor: pointer;
+
+            .delete-text {
+                writing-mode: tb-rl;
+                transform: rotate(-180deg);
+            }
+
+            .trash-icon {
+                width: 20px;
+                height: 20px;
+                margin-top: 10px;
+            }
         }
     }
 }
